# randomness-seed-contract

./: pyproject.toml
scripts/: build.py
src/on_chain/: seed.py
