[tool.poetry]
name = "randomness-seed-contract"
version = "0.1.0"
description = "Randomness Seed Contract"
authors = ["Sam Jeffrey M"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
opshin = "^0.12.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
